--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 <ul id="destinations"></ul>
         
         
-<script async defer src="../challenges/2--Airline-API.js"> </script>
+<script async defer src="./2--Airline-API.js"> </script>
     </body>
 </html>
